# food-orders

./: .env_example  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
src/app/: __init__.py
src/app/config/: __init__.py
src/app/controllers/: auth.py  user.py
src/app/db/: __init__.py
src/app/entities/category/: __init__.py  schema.py
src/app/entities/city/: __init__.py  schema.py
src/app/entities/country/: schema.py
src/app/entities/food/: __init__.py  schema.py
src/app/entities/permissions/: schema.py
src/app/entities/role/: schema.py
src/app/entities/state/: __init__.py  schema.py
src/app/entities/user/: __init__.py  schema.py
src/app/middlewares/: auth.py
src/app/models/categories/: __init__.py  schema.py
src/app/models/city/: __init__.py  schema.py
src/app/models/country/: __init__.py  schema.py
src/app/models/food/: __init__.py  schema.py
src/app/models/permissions/: __init__.py  schema.py
src/app/models/role/: __init__.py  schema.py
src/app/models/state/: __init__.py  schema.py
src/app/models/user/: __init__.py  schema.py
src/app/routes/: __init__.py
src/app/services/: auth.py  user.py
src/app/utils/: __init__.py
